@@ -57,6 +57,7 @@ CVscpClient::~CVscpClient()
     ;
 }
 
+
 ///////////////////////////////////////////////////////////////////////////////
 // setCallback
 //
