@@ -1,6 +1,8 @@
 Change log for the VSCP Daemon
 ==============================
 
+220202 AKHE vscpclient gettype was not implemented but is now.
+220202 AKHE register.h/register.cpp changed name to vscp_register.h/vscp_register.cpp to be consistent with vscp_client...
 220103 AKHE nlohmann Updated json lib to 3.10.5
 211122 AKHE libcurl is now a dependency for mdf parts
 211122 AKHE Remove bitfild and guid as abstract variable types
